Fix: Z-index issue for “annotation tools” overlay Viewport ActionBar “Label” (Checkmark + ‘A’)

--- a/platform/ui/src/assets/styles/styles.css
+++ b/platform/ui/src/assets/styles/styles.css
@@ -34,6 +34,10 @@
   @apply hidden;
 }
 
+.tooltip {
+  @apply z-10 absolute;
+}
+
 /* TOOLTIP WORKAROUND FOR ARROW UP */
 .tooltip.tooltip-up::before {
   @apply bg-primary-dark absolute z-10;
